# sync2rag

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  README.zh.md  config.example.yaml  go.mod  pyproject.toml
.github/workflows/: docker-image.yml
cmd/sync2rag/: main.go
src/sync2rag/: captioner.py  cleaner.py  cli.py  config.py  docling_client.py  lightrag_client.py  manifest.py  markdown_utils.py  normalized_markdown.py  scanner.py  state.py  syncer.py  utils.py
tests/: test_caption_cleaning.py  test_cli.py  test_config.py  test_image_injection.py  test_normalized_markdown.py
